--- a/WemosD1WiFiApp/app/src/main/res/layout/activity_main.xml
+++ b/WemosD1WiFiApp/app/src/main/res/layout/activity_main.xml
@@ -6,94 +6,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <ListView
-        android:id="@+id/networksList"
-        android:layout_width="282dp"
-        android:layout_height="291dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="101dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifiBtn"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/wifiBtn"
-        android:layout_width="57dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="84dp"
-        app:icon="@drawable/baseline_wifi_find_24"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar" />
 
-    <TextView
-        android:id="@+id/connTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="344dp"
-        android:layout_marginBottom="39dp"
-        app:layout_constraintBottom_toTopOf="@+id/wifiBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/waterView"
-        android:layout_width="54dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="87dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/baseline_water_drop_24"
-        android:enabled="false"
-        app:layout_constraintBottom_toTopOf="@+id/networksList"
-        app:layout_constraintStart_toEndOf="@+id/checkBattery"
-        app:layout_constraintTop_toTopOf="parent" />
-
+<!--
     <TextView
         android:id="@+id/battLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="702dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="426dp"
+        android:layout_marginEnd="-58dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="10dp" />
 
     <Button
         android:id="@+id/checkBattery"
         android:layout_width="58dp"
         android:layout_height="63dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="51dp"
         android:text="Button"
         app:icon="@drawable/baseline_battery_charging_full_24"
-        app:layout_constraintBottom_toTopOf="@+id/networksList"
-        app:layout_constraintStart_toEndOf="@+id/wifiBtn"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="240dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="147dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="368dp"
+        android:layout_marginBottom="9dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_battery_charging_full_24" />
@@ -102,13 +53,10 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="240dp"
+        android:layout_marginStart="19dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="104dp"
-        app:layout_constraintBottom_toTopOf="@+id/networksList"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toStartOf="@+id/waterLevelTB"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/baseline_water_drop_24" />
@@ -117,25 +65,48 @@
         android:id="@+id/waterLevelTB"
         android:layout_width="65dp"
         android:layout_height="21dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="106dp"
-        app:layout_constraintBottom_toTopOf="@+id/networksList"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="295dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        tools:layout_editor_absoluteY="33dp" />
 
     <Button
         android:id="@+id/waterLvlBtn"
         android:layout_width="59dp"
         android:layout_height="60dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="37dp"
         android:text="W"
-        app:layout_constraintBottom_toTopOf="@+id/networksList"
-        app:layout_constraintStart_toEndOf="@+id/waterView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBattery" />
+-->
+    <TextView
+        android:id="@+id/connTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="106dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingTop="4dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+
+        />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
